# rust-web-axum

./: .gitignore  Cargo.toml
todos-adapter/: Cargo.toml
todos-adapter/src/repository/: mail.rs  mail_grpc.rs  mod.rs  test_grpc.rs  todo.rs  todo_redis.rs
todos-app/: Cargo.toml
todos-app/src/usecase/: mail.rs  todo.rs
todos-controller/: Cargo.toml
todos-controller/src/: lib.rs  main.rs
todos-controller/src/authenticate/: basic_authenticate.rs  mod.rs
todos-controller/src/error/: error.rs
todos-controller/src/grpc/: mail_interceptor.rs  mail_sender.rs  mod.rs
todos-controller/src/handler/: cookie.rs  health.rs  mod.rs  request_id.rs  todo.rs
todos-controller/src/middleware/: logging.rs
todos-controller/src/module/: app_state.rs  mod.rs  modules.rs
todos-controller/src/setup/: axum_server_create_app.rs  grpc_server_create_app.rs  mod.rs
todos-controller/src/worker/: mod.rs  one_kit_worker.rs
todos-domain/: Cargo.toml  build.rs
todos-domain/proto/: helloworld.proto  mail.proto
todos-domain/src/: lib.rs
todos-domain/src/grpc_model/: mail.rs
todos-domain/src/model/: mail.rs  todo.rs
todos-domain/src/repository/: mail.rs  mod.rs  todo.rs
