[package]
name = "todos-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todos-domain = { path = "../todos-domain" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
redis = { version = "0.25", features = ["tokio-comp","json"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }