[package]
name = "todos-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todos-app = { path = "../todos-app" }
todos-adapter = { path = "../todos-adapter" }
todos-domain = { path = "../todos-domain" }

tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
axum = { version = "0.7", features = ["macros","ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","json"] }
tower-sessions = "0.12"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["util"] }
http = "1.1"
tower-http = { version = "0.5", features = ["request-id"] }
uuid = "1.8"
hyper = { version = "1.3", features = ["full"] }
jsonwebtoken = "9.3"
base64="0.22.0"
serde_json = "1.0"
chrono = "0.4"
tonic = "0.11"